--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "^16.4.7",
     "hardhat": "^2.22.19"
+  },
+  "dependencies": {
+    "ethers": "^6.13.5"
   }
 }
