--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,21 @@ out/
 # --- Other ---
 # IDE specific files like IntelliJ / WebStorm
 .idea/
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
