--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@openzeppelin/contracts": "^3.4.0",
         "@uniswap/v3-core": "^1.0.1",
         "@uniswap/v3-periphery": "^1.4.4",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.7",
         "hardhat": "^2.22.19"
     },
