--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@uniswap/sdk-core": "^7.7.2",
         "@uniswap/v3-sdk": "^3.25.2",
         "axios": "^1.8.4",
-        "ethers": "^6.13.5"
+        "ethers": "^6.13.5",
+        "node-fetch": "^3.3.2"
     }
 }
