--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@uniswap/v3-sdk": "^3.25.2",
         "axios": "^1.8.4",
         "ethers": "^6.13.5",
+        "jsbi": "^4.3.2",
         "node-fetch": "^3.3.2"
     }
 }
