--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "hardhat": "^2.22.19"
     },
     "dependencies": {
-        "@uniswap/sdk-core": "4.0.1-beta.0",
+        "@uniswap/sdk-core": "3.1.0",
         "@uniswap/v3-sdk": "3.9.0",
         "axios": "^1.8.4",
         "ethers": "^6.13.5",
