--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^1.8.4",
         "ethers": "^6.13.5",
         "jsbi": "3.2.5",
+        "node-cache": "^5.1.2",
         "node-fetch": "^3.3.2"
     }
 }
