--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@uniswap/sdk-core": "3.1.0",
         "@uniswap/v3-sdk": "3.9.0",
+        "async-mutex": "^0.5.0",
         "axios": "^1.8.4",
         "ethers": "^6.13.5",
         "jsbi": "3.2.5",
